// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) copilot (default capability: the gate) 1`] = `
{
  "lines": 663,
  "sha256": "1f88b8e9bb3d522a27660446bf8f9353f76044462ad069d6470b1d98f719c6e3",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) copilot new_project (project-free: the shell) 1`] = `
{
  "lines": 663,
  "sha256": "9456f94588a19a2ca7b5a91eb5fa6a145063390831ce8e8cf2f8b7ab8450a5c0",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) copilot rfi (the shell + the job-picker sheet) 1`] = `
{
  "lines": 663,
  "sha256": "fe633830b14e7e5ea2b408b496ad5cd043e85479a2e4d6eb95f58de468d4cff7",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) delay-events (log, event, evidence, notice-period, notice-form sheets) 1`] = `
{
  "lines": 698,
  "sha256": "8257b50df36e89b71f2cc2aca642f637d2a5929e5742c084168ebc3de4ee9280",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) delay-events: a logged delay, its event sheet and the notice form 1`] = `
{
  "lines": 814,
  "sha256": "d17e0842798fd7e3e7fdefd07b274c8058da8ec102bd908bac6b83d644a33d25",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) project-detail (the hub with the cost and revision sheets) 1`] = `
{
  "lines": 1599,
  "sha256": "d20f93eaf76aa21729a98e62c32fbd3b36c5acd1cba01bf92ee6087c3114e567",
}
`;
